--- a/custom.css
+++ b/custom.css
@@ -8,4 +8,41 @@ body {
 
 a {
     color: cyan;
+    
+}
+
+a:link { text-decoration: none; }
+
+
+a:visited { text-decoration: none; }
+
+
+a:hover { text-decoration: none; }
+
+
+a:active { text-decoration: none; }
+
+.prompt p::after {
+  content: "";
+  width: 1rem;
+  height: 2rem;
+  background: #c7c6c8;
+  display: inline-block;
+}
+
+.prompt p {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+}
+
+.prompt p::after {
+    /*code commented for brevity*/
+    animation: cursor-blink 1.5s steps(2) infinite;
 }
