--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,7 @@
+@import "@fontsouce/cousine";
+
 body {
-  font-family: "monospace";
+  font-family: "cousine";
   font-size: 1.5em;
   padding: 2em;
   background-color: rgb(42, 39, 39);
@@ -25,7 +27,7 @@ a:active { text-decoration: none; }
 .prompt p::after {
   content: "";
   width: 1em;
-  height: 2em;
+  height: 2rem;
   background: #c7c6c8;
   display: inline-block;
 }
