--- a/custom.css
+++ b/custom.css
@@ -2,11 +2,14 @@
 
 body {
   font-family: "cousine";
-  font-size: 1.5em;
-  padding: 2em;
+  font-size: 3em;
+  padding-left: 1em;
   background-color: rgb(42, 39, 39);
   color: white;
 }
+
+
+
 
 a {
     color: cyan;
@@ -27,7 +30,7 @@ a:active { text-decoration: none; }
 .prompt p::after {
   content: "";
   width: 1em;
-  height: 2rem;
+  height: 2em;
   background: #c7c6c8;
   display: inline-block;
 }
@@ -35,7 +38,7 @@ a:active { text-decoration: none; }
 .prompt p {
   display: flex;
   align-items: center;
-  gap: 1em;
+  gap: 0.8em;
 }
 
 @keyframes cursor-blink {
