--- a/custom.css
+++ b/custom.css
@@ -1,30 +1,32 @@
-
 body {
-  font-family: "cousine", sans-serif !important;
-  font-size: 3em;
+  font-family: "system-ui", sans-serif !important;
+  font-size: 2em;
   padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 1em;
   background-color: rgb(42, 39, 39);
   color: white;
 }
 
-
-
-
 a {
-    color: cyan;
-    
+  color: cyan;
 }
 
-a:link { text-decoration: none; }
+a:link {
+  text-decoration: none;
+}
 
+a:visited {
+  text-decoration: none;
+}
 
-a:visited { text-decoration: none; }
+a:hover {
+  text-decoration: none;
+}
 
-
-a:hover { text-decoration: none; }
-
-
-a:active { text-decoration: none; }
+a:active {
+  text-decoration: none;
+}
 
 .prompt p::after {
   content: "";
@@ -47,6 +49,37 @@ a:active { text-decoration: none; }
 }
 
 .prompt p::after {
-    /*code commented for brevity*/
-    animation: cursor-blink 1.5s steps(2) infinite;
+  /*code commented for brevity*/
+  animation: cursor-blink 1.5s steps(2) infinite;
+}
+
+.card-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(4, 4, 4, 1);
+  transition: 0.3s;
+  border-radius: 15px;
+  margin: 10px;
+  background-color: #c7c6c818;
+  max-width: 350px;
+  max-height: fit-content;
+}
+
+.card-content {
+  padding: 0.5em 0.5em 0.5em 0.5em;
+}
+
+video {
+  max-width: 350px;
+  border-radius: 15px 15px 0 0;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
