--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,7 +4,7 @@
  */
 
 .heroBanner {
-  margin: 8rem 0;
+  margin: 0rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 0rem;
   }
 }
 
@@ -20,4 +20,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.video_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.player__wrapper {
+  position: relative;
 }
